overflow issue fixed

--- a/css/counter.css
+++ b/css/counter.css
@@ -19,8 +19,8 @@ body {
 	display: -webkit-box;
   	display: -webkit-flex;
   	display: -ms-flexbox;
-  	font-family: Roboto, "Helvetica Neue", sans-serif;
-  	font-size: 18px;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-size: 18px;
 }
 
 .welcome{
@@ -28,6 +28,7 @@ body {
 	height: 100%;
 	display: flex;
 	z-index: 1;
+  overflow-x: hidden;
 	-webkit-perspective: 1000px;
     	perspective: 1000px;
   	background-color: #f5f5f5;
@@ -184,10 +185,11 @@ body {
 	width: 100%;
 	height: 100%;
 	position: absolute;
+  top: 0%;
 	left: 200%;
 	z-index: 2;
 	background: beige;
-	transition: left .6s ease-in-out;
+	transition: all .6s ease-in-out;
   text-align: center;
 }
 
@@ -196,16 +198,14 @@ body {
   top: 100%;
   left: 0%;
   z-index: 3;
-  display: none;
   position: absolute;
   transition: .6s ease-in-out;
+  display: none;
 }
 
 .main-column{
   margin-top: 12%;
 }
-
-.score-board
 
 #add-score{
 	margin-top: 30px;
@@ -222,8 +222,8 @@ body {
 }
 
 #modal1{
-	width: 500px;
-  height: 700px;
+	width: 30rem;
+  height: 40rem;
 }
 
 .row .win{
